--- a/DS4Windows.UI/Themes/CustomThemeLight.xaml
+++ b/DS4Windows.UI/Themes/CustomThemeLight.xaml
@@ -1,8 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:bluetoothusbstatusiconex="clr-namespace:DS4WinWPF.UI.Control.CustomControlEx.BluetoothUSBStatusIconEx"
+                    xmlns:exclusivestatusiconex="clr-namespace:DS4WinWPF.UI.Control.CustomControlEx.ExclusiveStatusIconEx"
                     xmlns:pathbuttonex="clr-namespace:DS4WinWPF.UI.Control.CustomControlEx.PathButtonEx">
 
     <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/DS4WinWPF.UI;component/Control/CustomControlEx/BluetoothUSBStatusIconEx/cBluetoothUSBStatusIcon_style.xaml"/>
+        <ResourceDictionary Source="/DS4WinWPF.UI;component/Control/CustomControlEx/ExclusiveStatusIconEx/cExclusiveStatusIcon_style.xaml"/>
         <ResourceDictionary Source="/DS4WinWPF.UI;component/Control/CustomControlEx/PathButtonEx/cPathButton_style.xaml"/>
 
         <ResourceDictionary Source="/DS4WinWPF.UI;component/Control/CustomStyleEx/ButtonEx/cButton_style.xaml"/>
@@ -33,11 +37,18 @@
     <SolidColorBrush x:Key="PathBackgroundColor" Color="#20000000"/>
 
     <!--c控件-->
+    <Style TargetType="{x:Type bluetoothusbstatusiconex:cBluetoothUSBStatusIcon}" BasedOn="{StaticResource cBluetoothUSBStatusIconStyle}">
+        <Setter Property="PathColor" Value="{StaticResource PathColor}"/>
+    </Style>
+    <Style TargetType="{x:Type exclusivestatusiconex:cExclusiveStatusIcon}" BasedOn="{StaticResource cExclusiveStatusIconStyle}">
+        <Setter Property="PathColor" Value="{StaticResource PathColor}"/>
+    </Style>
     <Style TargetType="{x:Type pathbuttonex:cPathButton}" BasedOn="{StaticResource cPathButtonStyle}">
         <Setter Property="PathColor" Value="{StaticResource PathColor}"/>
         <Setter Property="TextColor" Value="{StaticResource TextColor}"/>
         <Setter Property="PathBackgroundColor" Value="{StaticResource PathBackgroundColor}"/>
     </Style>
+    
     <!--c样式-->
     <!--<Style TargetType="{x:Type Button}" BasedOn="{StaticResource cButtonStyle}">
         <Setter Property="Foreground" Value="{StaticResource TextColor}" />
@@ -64,8 +75,8 @@
                 <Setter Property="Background">
                     <Setter.Value>
                         <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                            <GradientStop Color="#44808080" Offset="-0.4"/>
-                            <GradientStop Color="#44808080" Offset="0.9"/>
+                            <GradientStop Color="#88D3D3D3" Offset="-0.4"/>
+                            <GradientStop Color="#88D3D3D3" Offset="0.9"/>
                         </LinearGradientBrush>
                     </Setter.Value>
                 </Setter>
