--- a/DS4Windows.UI/Control/CustomStyleEx/CheckBoxEx/cCheckBox_style.xaml
+++ b/DS4Windows.UI/Control/CustomStyleEx/CheckBoxEx/cCheckBox_style.xaml
@@ -25,32 +25,36 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type CheckBox}">
-                    <Grid x:Name="templateRoot" Background="Transparent" SnapsToDevicePixels="True">
+                    <Grid x:Name="templateRoot" Background="Transparent" SnapsToDevicePixels="True"
+                          Margin="1">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
+                        
                         <Border x:Name="checkBoxBorder"
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}" 
                                 BorderThickness="{TemplateBinding BorderThickness}" 
                                 HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                 VerticalAlignment="Stretch"
-                                Margin="1"
+                                MinWidth="12"
+                                Height="{Binding ActualWidth,RelativeSource={RelativeSource Self}}"
                                 CornerRadius="1.5">
-                            <Grid x:Name="markGrid" Margin="1">
+                            <Grid x:Name="markGrid" Margin="0">
                                 <Path x:Name="optionMark" Data="F1 M 9.97498,1.22334L 4.6983,9.09834L 4.52164,9.09834L 0,5.19331L 1.27664,3.52165L 4.255,6.08833L 8.33331,1.52588e-005L 9.97498,1.22334 Z "
-                                      Margin="0.5" Opacity="0" Stretch="None"
+                                      Margin="2" Opacity="0" Stretch="Uniform"
                                       Fill="White"
                                       HorizontalAlignment="Center" VerticalAlignment="Center"/>
                                 <Rectangle x:Name="indeterminateMark" Fill="{StaticResource OptionMark.Static.Glyph}"
-                                           Margin="1" Opacity="0"/>
+                                           Opacity="0"/>
                             </Grid>
                         </Border>
                         <Border x:Name="realBorder"
                                 BorderBrush="DimGray"
                                 BorderThickness="1"
-                                CornerRadius="1.5"/>
+                                CornerRadius="1.5"
+                                Height="{Binding ActualWidth,RelativeSource={RelativeSource Self}}"/>
                         <!--<ContentPresenter x:Name="contentPresenter" Grid.Column="1" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>-->
                         <TextBlock Grid.Column="1" 
                                    x:Name="contentSite" 
