--- a/DS4Windows.UI/Control/CustomStyleEx/SliderEx/cSlider_style.xaml
+++ b/DS4Windows.UI/Control/CustomStyleEx/SliderEx/cSlider_style.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:CustomMacroBase.CustomControlEx.SliderEx">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style x:Key="RepeatButtonTransparent" TargetType="{x:Type RepeatButton}">
         <Setter Property="OverridesDefaultStyle" Value="true"/>
@@ -15,7 +14,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
     <SolidColorBrush x:Key="SliderThumb.Static.Background" Color="#FFF0F0F0"/>
     <SolidColorBrush x:Key="SliderThumb.Static.Border" Color="#FFACACAC"/>
     <SolidColorBrush x:Key="SliderThumb.Static.Foreground" Color="#FFE5E5E5"/>
@@ -29,6 +28,7 @@
     <SolidColorBrush x:Key="SliderThumb.Track.Border" Color="#FFD6D6D6"/>
 
     <SolidColorBrush x:Key="SliderThumb.Custom.DarkViolet" Color="DarkViolet"/>
+    <SolidColorBrush x:Key="SliderThumb.Custom.Dark3Violet" Color="DarkSlateGray"/>
     <SolidColorBrush x:Key="SliderThumb.Custom.DarkGray" Color="DarkGray"/>
     <SolidColorBrush x:Key="SliderThumb.Custom.Snow" Color="Snow"/>
     <SolidColorBrush x:Key="SliderThumb.Custom.Red" Color="Red"/>
@@ -36,12 +36,12 @@
 
     <VisualBrush x:Key="SliderThumb.StripeTextureLeft" TileMode="Tile" Viewport="0,0,3,3" ViewportUnits="Absolute" Viewbox="0,0,15,15" ViewboxUnits="Absolute">
         <VisualBrush.Visual>
-            <Grid Background="{StaticResource SliderThumb.Custom.DarkViolet}" RenderTransformOrigin="0.5,0.5">
-                <Path Data="M 0,15 L 15,0" Stroke="Aqua" StrokeThickness="5" Opacity="0.7" />
-                <Path Data="M 15,15 L 30,0" Stroke="Aqua"  StrokeThickness="5" Opacity="0.7" />
-                <Path Data="M 15,-15 L 0,0" Stroke="Aqua"  StrokeThickness="5" Opacity="0.7" />
-                <Path Data="M 0,30 L 15,15" Stroke="Aqua"  StrokeThickness="5" Opacity="0.7" />
-                <Path Data="M 0,0 L -15,15" Stroke="Aqua"  StrokeThickness="5" Opacity="0.7" />
+            <Grid Background="{StaticResource SliderThumb.Custom.DarkSlateGray}" RenderTransformOrigin="0.5,0.5">
+                <Path Data="M 0,15 L 15,0" Stroke="{StaticResource SliderThumb.Custom.DarkViolet}" StrokeThickness="5" Opacity="1" />
+                <Path Data="M 15,15 L 30,0" Stroke="{StaticResource SliderThumb.Custom.DarkViolet}"  StrokeThickness="5" Opacity="1" />
+                <Path Data="M 15,-15 L 0,0" Stroke="{StaticResource SliderThumb.Custom.DarkViolet}"  StrokeThickness="5" Opacity="1" />
+                <Path Data="M 0,30 L 15,15" Stroke="{StaticResource SliderThumb.Custom.DarkViolet}"  StrokeThickness="5" Opacity="1" />
+                <Path Data="M 0,0 L -15,15" Stroke="{StaticResource SliderThumb.Custom.DarkViolet}"  StrokeThickness="5" Opacity="1" />
             </Grid>
         </VisualBrush.Visual>
     </VisualBrush>
@@ -262,7 +262,7 @@
                 <Border x:Name="TrackBackground" 
                         BorderThickness="0"
                         Width="4.0"
-                        Margin="0,5" 
+                        Margin="5,0" 
                         Grid.Column="1"
                         HorizontalAlignment="center" 
                         CornerRadius="1">
@@ -284,8 +284,7 @@
                                 BorderBrush="{StaticResource SliderThumb.Custom.Snow}" 
                                 BorderThickness="1"    
                                 Width="4.0"
-                                Height="{Binding ActualHeight, ElementName=TopRepeatButton}"
-                                Margin="0,0,0,0"/>
+                                Height="{Binding ActualHeight, ElementName=TopRepeatButton}"/>
                         <Canvas Margin="-1,-6">
                             <Rectangle x:Name="PART_SelectionRange" Fill="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" Visibility="Hidden" Width="4.0"/>
                         </Canvas>
@@ -327,9 +326,8 @@
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
-    
-    <Style TargetType="{x:Type local:cSlider}">
-        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+
+    <Style x:Key="cSliderStyle" TargetType="{x:Type Slider}">
         <Setter Property="Stylus.IsPressAndHoldEnabled" Value="false"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
